--- a/package.json
+++ b/package.json
@@ -8,12 +8,15 @@
   "dependencies": {
     "body-parser": "^1.20.0",
     "cookie-parser": "~1.4.4",
+    "crypto-js": "^4.1.1",
     "debug": "~2.6.9",
     "ejs": "~2.6.1",
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
+    "log4js": "^6.6.1",
     "morgan": "~1.9.1",
     "mysql": "^2.18.1",
+    "request": "^2.88.2",
     "sequelize": "^6.21.3"
   }
 }
