--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "log4js": "^6.6.1",
     "morgan": "~1.9.1",
     "mysql": "^2.18.1",
+    "mysql2": "^2.3.3",
     "request": "^2.88.2",
     "sequelize": "^6.21.3"
   }
